# mididash

./: LICENSE  README.md  eslint.config.js  package-lock.json  package.json  vite.config.js
.github/workflows/: release-test.yml  release.yml
docs/: CNAME  index.html
docs/assets/: index-9UUZd14e.js  index-BFqs5A3T.css  index-BGmcq9oi.js  index-BLPUbWtm.css  index-BXVyj4tC.css  index-BfrmHpuN.css  index-BjE4Tzmd.js  index-BjksDZnm.js  index-C1c2PsZC.js  index-CD_E4Z7J.js  index-CLFkdzB_.css  index-Cp0f2_AG.js  index-Cu9uNBLl.css  index-D1R_QktQ.js  index-D3zbjWCx.css  index-DZZzQei3.js  index-DxOmQJmQ.js  index-UMIxLM11.css  index-UZsUTfWk.css  index-WN2JOuOR.css  index-l5u5RTDM.js  index-xFzYQ7sR.css
site/: index.html  package-lock.json  package.json  vite.config.js
site/src/: Site.vue  main.js
src/: App.vue  globals.js  main.js  midi-data.js  styles.css  styles.styl  themes.styl  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  commands.rs  globals.rs  hub.rs  lib.rs  main.rs  utils.rs
src-tauri/src/devices/: delay.rs  device.rs  input.rs  mapper.rs  monitor.rs  output.rs  script.rs  splitter.rs  trigger.rs  virtual_c.rs
src/assets/: GM.INS
src/components/: AboutView.vue  CodeView.vue  MainView.vue  MonitorView.vue  Navbar.vue  SettingsView.vue
src/components/global/: ContextMenu.vue  FlashMessages.vue  Loader.vue  Popup.vue  Split.vue  VirtualScroll.vue  Window.vue
src/components/graph/: DeviceNode.vue  (+7 more)
src/stores/: app.js  graph.js  index.js
(+22 files in other folders)
