[package]
name = "mididash"
version = "0.1.7"
description = "A new midi router"
authors = ["tilr"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mididash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midir = "0.10.1"
once_cell = "1.20.2"
serial_test = "3.2.0"
tauri-plugin-store = "2.1.0"
tauri-plugin-os = "2"
regex = "1.11.1"
tauri-plugin-dialog = "2"
tokio = { version = "1.42.0", features = ["full"] }
lazy_static = "1.5.0"
mlua = { version = "0.10.2", features = ["lua54", "vendored", "send"] }

[target.'cfg(target_os = "macos")'.dependencies]
coremidi = "0.8.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

